enterprise/operator/pkg/lb/testdata/lbfrontend_translation/03-http/input-config.yaml
ServerName: "ilb"
T1T2HealthCheck:
  T1ProbeTimeoutSeconds: 5
  T2ProbeMinHealthyBackendPercentage: 20
