enterprise/operator/pkg/lb/testdata/lbfrontend_translation/03-http/input-lbbackend-2.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBBackend
metadata:
  namespace: default
  name: lb-2
spec:
  addresses:
    - ip: 172.18.0.7
      port: 8080
    - ip: 172.18.0.8
      port: 8080
  healthcheck:
    interval: 20s
