enterprise/operator/pkg/lb/testdata/lbfrontend_translation/03-http/input-lbfrontend.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBFrontend
metadata:
  namespace: default
  name: lb-1
spec:
  routes:
    - http:
        hostNames:
          - "*"
        backend: lb-1
    - http:
        hostNames:
          - "bar.acme.io"
        backend: lb-1
  port: 80
  vip: 100.64.0.100
